// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CDK Snapshot Tests > OAuthStack matches snapshot 1`] = `
{
  "Outputs": {
    "AlarmTopicArn": {
      "Value": {
        "Ref": "AlarmTopicD01E77F9",
      },
    },
    "FeishuRedirectUrl": {
      "Description": "Add this to Feishu app redirect URLs",
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::GetAtt": [
                "OAuthCFFF1C4D27",
                "DomainName",
              ],
            },
            "/callback",
          ],
        ],
      },
    },
    "McpEndpoint": {
      "Description": "MCP Streamable HTTP endpoint (same domain as OAuth)",
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::GetAtt": [
                "OAuthCFFF1C4D27",
                "DomainName",
              ],
            },
            "/mcp",
          ],
        ],
      },
    },
    "MiddlewareFunctionName": {
      "Value": {
        "Ref": "MiddlewareFunction32153138",
      },
    },
    "OAuthApiEndpointA2953D04": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "OAuthApi8AB10ACC",
            },
            ".execute-api.us-west-2.",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "OAuthApiDeploymentStageprod294A63BE",
            },
            "/",
          ],
        ],
      },
    },
    "OAuthClientId": {
      "Description": "OAuth Client ID for Quick Desktop connector",
      "Value": "lark-mcp-on-agentcore",
    },
    "OAuthEndpoint": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::GetAtt": [
                "OAuthCFFF1C4D27",
                "DomainName",
              ],
            },
          ],
        ],
      },
    },
    "OAuthFunctionName": {
      "Value": {
        "Ref": "OAuthFunction814F9D6D",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AlarmTopicD01E77F9": {
      "Properties": {
        "DisplayName": "Lark MCP on AgentCore alarms",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "TopicName": "lark-mcp-on-agentcore-alarms",
      },
      "Type": "AWS::SNS::Topic",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": {
      "DependsOn": [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-west-2",
          "S3Key": "2819175352ad1ce0dae768e83fc328fb70fb5f10b4a8ff0ccbcb791f02b0716d.zip",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": [
          {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "MiddlewareErrorAlarmFB29B09C": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmName": "lark-mcp-on-agentcore-middleware-errors",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": {
              "Ref": "MiddlewareFunction32153138",
            },
          },
        ],
        "EvaluationPeriods": 2,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "MiddlewareFunction32153138": {
      "DependsOn": [
        "MiddlewareFunctionServiceRoleDefaultPolicy28D7D688",
        "MiddlewareFunctionServiceRole1ED1018C",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-west-2",
          "S3Key": "f9646c527d0ebb52412deb9362bfcec896dcbf35a800cdeaaf65389c1ec2a5c8.zip",
        },
        "Environment": {
          "Variables": {
            "AUTHORIZE_BASE": "SET_AFTER_DEPLOY",
            "DEPLOY_REGION": "us-west-2",
            "RUNTIME_ARN": "arn:aws:bedrock-agentcore:us-west-2:123456789012:runtime/test-runtime",
            "SECRET_PREFIX": "lark-mcp-on-agentcore/users",
            "STATE_SECRET_PARAM": "/lark-mcp-on-agentcore/state-secret",
          },
        },
        "Handler": "index.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "MiddlewareFunctionServiceRole1ED1018C",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "MiddlewareFunctionServiceRole1ED1018C": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "MiddlewareFunctionServiceRoleDefaultPolicy28D7D688": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": "arn:aws:secretsmanager:us-west-2:123456789012:secret:lark-mcp-on-agentcore/users/*",
            },
            {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": "arn:aws:ssm:us-west-2:123456789012:parameter/lark-mcp-on-agentcore/state-secret",
            },
            {
              "Action": "bedrock-agentcore:InvokeAgentRuntime",
              "Effect": "Allow",
              "Resource": "arn:aws:bedrock-agentcore:us-west-2:123456789012:runtime/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "MiddlewareFunctionServiceRoleDefaultPolicy28D7D688",
        "Roles": [
          {
            "Ref": "MiddlewareFunctionServiceRole1ED1018C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "OAuthApi8AB10ACC": {
      "Properties": {
        "Name": "lark-mcp-on-agentcore-oauth",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "OAuthApiAccount8DD6D9E2": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "OAuthApi8AB10ACC",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "OAuthApiCloudWatchRole74995C53",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "OAuthApiCloudWatchRole74995C53": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "OAuthApiDeploymentAC5F88DBd540f4ebb69edc30d0aa41145fa72e83": {
      "DependsOn": [
        "OAuthApiwellknownoauthauthorizationserverGET561B1766",
        "OAuthApiwellknownoauthauthorizationserverA70044CC",
        "OAuthApiwellknown5E60497E",
        "OAuthApiauthorizeGETF3EB57B3",
        "OAuthApiauthorizeFBF5971C",
        "OAuthApicallbackGETF19BC972",
        "OAuthApicallback8EC01216",
        "OAuthApimcpDELETE4CDC386D",
        "OAuthApimcpGET8E5020FE",
        "OAuthApimcpPOSTBA61C876",
        "OAuthApimcpA390DE01",
        "OAuthApitokenPOSTD049E145",
        "OAuthApitoken7101D36F",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "OAuthApiDeploymentStageprod294A63BE": {
      "DependsOn": [
        "OAuthApiAccount8DD6D9E2",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "OAuthApiDeploymentAC5F88DBd540f4ebb69edc30d0aa41145fa72e83",
        },
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
        "StageName": "prod",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "OAuthApiauthorizeFBF5971C": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "OAuthApi8AB10ACC",
            "RootResourceId",
          ],
        },
        "PathPart": "authorize",
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "OAuthApiauthorizeGETApiPermissionTestOAuthStackOAuthApiCAFFC54FGETauthorize08172EC7": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OAuthFunction814F9D6D",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/",
              {
                "Ref": "OAuthApiDeploymentStageprod294A63BE",
              },
              "/GET/authorize",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApiauthorizeGETApiPermissionTestTestOAuthStackOAuthApiCAFFC54FGETauthorizeC8993419": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OAuthFunction814F9D6D",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/test-invoke-stage/GET/authorize",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApiauthorizeGETF3EB57B3": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-west-2:lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "OAuthFunction814F9D6D",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "OAuthApiauthorizeFBF5971C",
        },
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "OAuthApicallback8EC01216": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "OAuthApi8AB10ACC",
            "RootResourceId",
          ],
        },
        "PathPart": "callback",
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "OAuthApicallbackGETApiPermissionTestOAuthStackOAuthApiCAFFC54FGETcallback05D2BDC5": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OAuthFunction814F9D6D",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/",
              {
                "Ref": "OAuthApiDeploymentStageprod294A63BE",
              },
              "/GET/callback",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApicallbackGETApiPermissionTestTestOAuthStackOAuthApiCAFFC54FGETcallback970D3EBC": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OAuthFunction814F9D6D",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/test-invoke-stage/GET/callback",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApicallbackGETF19BC972": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-west-2:lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "OAuthFunction814F9D6D",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "OAuthApicallback8EC01216",
        },
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "OAuthApimcpA390DE01": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "OAuthApi8AB10ACC",
            "RootResourceId",
          ],
        },
        "PathPart": "mcp",
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "OAuthApimcpDELETE4CDC386D": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "DELETE",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-west-2:lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "MiddlewareFunction32153138",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "OAuthApimcpA390DE01",
        },
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "OAuthApimcpDELETEApiPermissionTestOAuthStackOAuthApiCAFFC54FDELETEmcp7D035FB8": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "MiddlewareFunction32153138",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/",
              {
                "Ref": "OAuthApiDeploymentStageprod294A63BE",
              },
              "/DELETE/mcp",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApimcpDELETEApiPermissionTestTestOAuthStackOAuthApiCAFFC54FDELETEmcpDEBE57D8": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "MiddlewareFunction32153138",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/test-invoke-stage/DELETE/mcp",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApimcpGET8E5020FE": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-west-2:lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "MiddlewareFunction32153138",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "OAuthApimcpA390DE01",
        },
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "OAuthApimcpGETApiPermissionTestOAuthStackOAuthApiCAFFC54FGETmcp4A0C7330": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "MiddlewareFunction32153138",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/",
              {
                "Ref": "OAuthApiDeploymentStageprod294A63BE",
              },
              "/GET/mcp",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApimcpGETApiPermissionTestTestOAuthStackOAuthApiCAFFC54FGETmcp466F4A4E": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "MiddlewareFunction32153138",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/test-invoke-stage/GET/mcp",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApimcpPOSTApiPermissionTestOAuthStackOAuthApiCAFFC54FPOSTmcpBDFC495A": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "MiddlewareFunction32153138",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/",
              {
                "Ref": "OAuthApiDeploymentStageprod294A63BE",
              },
              "/POST/mcp",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApimcpPOSTApiPermissionTestTestOAuthStackOAuthApiCAFFC54FPOSTmcp2D29C9BD": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "MiddlewareFunction32153138",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/test-invoke-stage/POST/mcp",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApimcpPOSTBA61C876": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "POST",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-west-2:lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "MiddlewareFunction32153138",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "OAuthApimcpA390DE01",
        },
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "OAuthApitoken7101D36F": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "OAuthApi8AB10ACC",
            "RootResourceId",
          ],
        },
        "PathPart": "token",
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "OAuthApitokenPOSTApiPermissionTestOAuthStackOAuthApiCAFFC54FPOSTtokenF6941B08": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OAuthFunction814F9D6D",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/",
              {
                "Ref": "OAuthApiDeploymentStageprod294A63BE",
              },
              "/POST/token",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApitokenPOSTApiPermissionTestTestOAuthStackOAuthApiCAFFC54FPOSTtoken86503CBC": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OAuthFunction814F9D6D",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/test-invoke-stage/POST/token",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApitokenPOSTD049E145": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "POST",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-west-2:lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "OAuthFunction814F9D6D",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "OAuthApitoken7101D36F",
        },
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "OAuthApiwellknown5E60497E": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "OAuthApi8AB10ACC",
            "RootResourceId",
          ],
        },
        "PathPart": ".well-known",
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "OAuthApiwellknownoauthauthorizationserverA70044CC": {
      "Properties": {
        "ParentId": {
          "Ref": "OAuthApiwellknown5E60497E",
        },
        "PathPart": "oauth-authorization-server",
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "OAuthApiwellknownoauthauthorizationserverGET561B1766": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-west-2:lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "OAuthFunction814F9D6D",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "OAuthApiwellknownoauthauthorizationserverA70044CC",
        },
        "RestApiId": {
          "Ref": "OAuthApi8AB10ACC",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "OAuthApiwellknownoauthauthorizationserverGETApiPermissionTestOAuthStackOAuthApiCAFFC54FGETwellknownoauthauthorizationserver426705AD": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OAuthFunction814F9D6D",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/",
              {
                "Ref": "OAuthApiDeploymentStageprod294A63BE",
              },
              "/GET/.well-known/oauth-authorization-server",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthApiwellknownoauthauthorizationserverGETApiPermissionTestTestOAuthStackOAuthApiCAFFC54FGETwellknownoauthauthorizationserverE0FC6A25": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OAuthFunction814F9D6D",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-west-2:123456789012:",
              {
                "Ref": "OAuthApi8AB10ACC",
              },
              "/test-invoke-stage/GET/.well-known/oauth-authorization-server",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OAuthCFFF1C4D27": {
      "Properties": {
        "DistributionConfig": {
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
              "PUT",
              "PATCH",
              "POST",
              "DELETE",
            ],
            "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
            "Compress": true,
            "OriginRequestPolicyId": "b689b0a8-53d0-40ab-baf2-68738e2966ac",
            "TargetOriginId": "TestOAuthStackOAuthCFOrigin1072641B6",
            "ViewerProtocolPolicy": "https-only",
          },
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "CustomOriginConfig": {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::Select": [
                  2,
                  {
                    "Fn::Split": [
                      "/",
                      {
                        "Fn::Join": [
                          "",
                          [
                            "https://",
                            {
                              "Ref": "OAuthApi8AB10ACC",
                            },
                            ".execute-api.us-west-2.",
                            {
                              "Ref": "AWS::URLSuffix",
                            },
                            "/",
                            {
                              "Ref": "OAuthApiDeploymentStageprod294A63BE",
                            },
                            "/",
                          ],
                        ],
                      },
                    ],
                  },
                ],
              },
              "Id": "TestOAuthStackOAuthCFOrigin1072641B6",
              "OriginPath": {
                "Fn::Join": [
                  "",
                  [
                    "/",
                    {
                      "Fn::Select": [
                        3,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Join": [
                                "",
                                [
                                  "https://",
                                  {
                                    "Ref": "OAuthApi8AB10ACC",
                                  },
                                  ".execute-api.us-west-2.",
                                  {
                                    "Ref": "AWS::URLSuffix",
                                  },
                                  "/",
                                  {
                                    "Ref": "OAuthApiDeploymentStageprod294A63BE",
                                  },
                                  "/",
                                ],
                              ],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                ],
              },
            },
          ],
          "PriceClass": "PriceClass_200",
          "WebACLId": "arn:aws:wafv2:us-east-1:123456789012:global/webacl/test-acl/abc123",
        },
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "OAuthCodesFF09132A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "code",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "code",
            "KeyType": "HASH",
          },
        ],
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "lark-mcp-on-agentcore-oauth-codes",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "TimeToLiveSpecification": {
          "AttributeName": "ttl",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
    "OAuthErrorAlarmC8D75714": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmName": "lark-mcp-on-agentcore-oauth-errors",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": {
              "Ref": "OAuthFunction814F9D6D",
            },
          },
        ],
        "EvaluationPeriods": 2,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "OAuthFunction814F9D6D": {
      "DependsOn": [
        "OAuthFunctionServiceRoleDefaultPolicy0A400EBA",
        "OAuthFunctionServiceRole6ABBFC33",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-west-2",
          "S3Key": "767a934ad55a3ef0b9ab31ea95c472c580de8ca0b7935ac6954127eb374aab91.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_DOMAINS": "mcp.example.com",
            "APP_SECRET_ID": "lark-mcp-on-agentcore/feishu-app",
            "CALLBACK_URL": "SET_AFTER_DEPLOY",
            "CODE_TABLE": {
              "Ref": "OAuthCodesFF09132A",
            },
            "OAUTH_CLIENT_ID": "lark-mcp-on-agentcore",
            "OAUTH_CLIENT_SECRET": "SET_AFTER_DEPLOY",
            "OPENID_PREFIX": "lark-mcp-on-agentcore/openid-map",
            "SECRET_PREFIX": "lark-mcp-on-agentcore/users",
            "STATE_SECRET_PARAM": "/lark-mcp-on-agentcore/state-secret",
          },
        },
        "Handler": "index.handler",
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "OAuthFunctionServiceRole6ABBFC33",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "OAuthFunctionLogRetention2C2C17E3": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "OAuthFunction814F9D6D",
              },
            ],
          ],
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "OAuthFunctionServiceRole6ABBFC33": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "OAuthFunctionServiceRoleDefaultPolicy0A400EBA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-west-2:123456789012:secret:lark-mcp-on-agentcore/feishu-app-??????",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": "arn:aws:ssm:us-west-2:123456789012:parameter/lark-mcp-on-agentcore/state-secret",
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:PutSecretValue",
                "secretsmanager:CreateSecret",
                "secretsmanager:DeleteSecret",
                "secretsmanager:TagResource",
              ],
              "Effect": "Allow",
              "Resource": "arn:aws:secretsmanager:us-west-2:123456789012:secret:lark-mcp-on-agentcore/*",
            },
            {
              "Action": "secretsmanager:ListSecrets",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "OAuthCodesFF09132A",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "OAuthCodesFF09132A",
                    "Arn",
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "OAuthFunctionServiceRoleDefaultPolicy0A400EBA",
        "Roles": [
          {
            "Ref": "OAuthFunctionServiceRole6ABBFC33",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RefreshFailedAlarmB973F059": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmName": "lark-mcp-on-agentcore-refresh-failed",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "RefreshFailed",
        "Namespace": "LarkMcpOnAgentCore",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "Threshold": 3,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "RefreshFailedFilter2963045F": {
      "Properties": {
        "FilterPattern": "{ ($.event = "refresh_cycle") && ($.failed = "*") }",
        "LogGroupName": {
          "Fn::GetAtt": [
            "OAuthFunctionLogRetention2C2C17E3",
            "LogGroupName",
          ],
        },
        "MetricTransformations": [
          {
            "MetricName": "RefreshFailed",
            "MetricNamespace": "LarkMcpOnAgentCore",
            "MetricValue": "$.failed",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "TokenLossAlarm4342D89C": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmName": "lark-mcp-on-agentcore-token-lost",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "TokenLost",
        "Namespace": "LarkMcpOnAgentCore",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TokenLossFilterC8F63ADE": {
      "Properties": {
        "FilterPattern": "{ $.event = "store_token_lost" }",
        "LogGroupName": {
          "Fn::GetAtt": [
            "OAuthFunctionLogRetention2C2C17E3",
            "LogGroupName",
          ],
        },
        "MetricTransformations": [
          {
            "MetricName": "TokenLost",
            "MetricNamespace": "LarkMcpOnAgentCore",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "TokenRefreshRule33B5CF67": {
      "Properties": {
        "ScheduleExpression": "rate(1 hour)",
        "State": "ENABLED",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "OAuthFunction814F9D6D",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "TokenRefreshRuleAllowEventRuleTestOAuthStackOAuthFunction488AD72B1AE3D27E": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OAuthFunction814F9D6D",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "TokenRefreshRule33B5CF67",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`CDK Snapshot Tests > RuntimeStack matches snapshot 1`] = `
{
  "Outputs": {
    "ImageUri": {
      "Value": {
        "Fn::Sub": "123456789012.dkr.ecr.us-west-2.\${AWS::URLSuffix}/cdk-hnb659fds-container-assets-ACCOUNT-REGION:ASSET_HASH",
      },
    },
    "RuntimeRoleArn": {
      "Value": {
        "Fn::GetAtt": [
          "RuntimeRoleFD8790A4",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "RuntimeRoleDefaultPolicy31263C89": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": "arn:aws:secretsmanager:us-west-2:123456789012:secret:lark-mcp-on-agentcore/feishu-app-*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RuntimeRoleDefaultPolicy31263C89",
        "Roles": [
          {
            "Ref": "RuntimeRoleFD8790A4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RuntimeRoleFD8790A4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "bedrock-agentcore.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AmazonEC2ContainerRegistryReadOnly",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`CDK Snapshot Tests > WafStack matches snapshot 1`] = `
{
  "Outputs": {
    "WebAclArn": {
      "Value": {
        "Fn::GetAtt": [
          "WebAcl",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "WebAcl": {
      "Properties": {
        "DefaultAction": {
          "Allow": {},
        },
        "Name": "lark-mcp-on-agentcore-waf",
        "Rules": [
          {
            "Action": {
              "Block": {},
            },
            "Name": "rate-limit-authorize",
            "Priority": 1,
            "Statement": {
              "RateBasedStatement": {
                "AggregateKeyType": "IP",
                "Limit": 100,
                "ScopeDownStatement": {
                  "ByteMatchStatement": {
                    "FieldToMatch": {
                      "UriPath": {},
                    },
                    "PositionalConstraint": "CONTAINS",
                    "SearchString": "/authorize",
                    "TextTransformations": [
                      {
                        "Priority": 0,
                        "Type": "NONE",
                      },
                    ],
                  },
                },
              },
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "rate-limit-authorize",
              "SampledRequestsEnabled": true,
            },
          },
          {
            "Action": {
              "Block": {},
            },
            "Name": "rate-limit-global",
            "Priority": 2,
            "Statement": {
              "RateBasedStatement": {
                "AggregateKeyType": "IP",
                "Limit": 2000,
              },
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "rate-limit-global",
              "SampledRequestsEnabled": true,
            },
          },
        ],
        "Scope": "CLOUDFRONT",
        "Tags": [
          {
            "Key": "project",
            "Value": "lark-mcp-on-agentcore",
          },
        ],
        "VisibilityConfig": {
          "CloudWatchMetricsEnabled": true,
          "MetricName": "lark-mcp-on-agentcore-waf",
          "SampledRequestsEnabled": true,
        },
      },
      "Type": "AWS::WAFv2::WebACL",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
